get interface
