# backend/api/inscription/v1/inscription_http.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go-http. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-http v2.6.3
+// - protoc-gen-go-http v2.6.1
 // - protoc             v3.21.5
 // source: inscription/v1/inscription.proto
 
@@ -19,38 +19,228 @@ var _ = binding.EncodeURL
 
 const _ = http.SupportPackageIsVersion1
 
-const OperationInscriptionCreateUser = "/api.inscription.v1.Inscription/CreateUser"
+const OperationInscriptionGetAnyByTrxHash = "/api.inscription.v1.Inscription/GetAnyByTrxHash"
+const OperationInscriptionGetFollow = "/api.inscription.v1.Inscription/GetFollow"
+const OperationInscriptionGetFollowTweet = "/api.inscription.v1.Inscription/GetFollowTweet"
+const OperationInscriptionGetGroup = "/api.inscription.v1.Inscription/GetGroup"
+const OperationInscriptionGetGroupMessage = "/api.inscription.v1.Inscription/GetGroupMessage"
+const OperationInscriptionGetMessage = "/api.inscription.v1.Inscription/GetMessage"
+const OperationInscriptionGetProfile = "/api.inscription.v1.Inscription/GetProfile"
+const OperationInscriptionGetTweet = "/api.inscription.v1.Inscription/GetTweet"
+const OperationInscriptionGetTweetByAddress = "/api.inscription.v1.Inscription/GetTweetByAddress"
 
 type InscriptionHTTPServer interface {
-	CreateUser(context.Context, *CreateUserInfo) (*UserInfoResponse, error)
+	GetAnyByTrxHash(context.Context, *GetAnyByTrxHashReq) (*SwiftResponse, error)
+	GetFollow(context.Context, *ByAddress) (*SwiftResponses, error)
+	GetFollowTweet(context.Context, *GetTweetReq) (*TweetResponse, error)
+	GetGroup(context.Context, *ByAddress) (*SwiftResponses, error)
+	GetGroupMessage(context.Context, *GetGroupMessageReq) (*SwiftResponses, error)
+	GetMessage(context.Context, *GetMessageReq) (*SwiftResponses, error)
+	GetProfile(context.Context, *ByAddress) (*SwiftResponse, error)
+	GetTweet(context.Context, *GetTweetReq) (*TweetResponse, error)
+	GetTweetByAddress(context.Context, *GetTweetReq) (*TweetResponse, error)
 }
 
 func RegisterInscriptionHTTPServer(s *http.Server, srv InscriptionHTTPServer) {
 	r := s.Route("/")
-	r.GET("/api/collection/ranking", _Inscription_CreateUser0_HTTP_Handler(srv))
+	r.GET("/api/profile", _Inscription_GetProfile0_HTTP_Handler(srv))
+	r.GET("/api/group", _Inscription_GetGroup0_HTTP_Handler(srv))
+	r.GET("/api/message", _Inscription_GetMessage0_HTTP_Handler(srv))
+	r.GET("/api/group_message", _Inscription_GetGroupMessage0_HTTP_Handler(srv))
+	r.GET("/api/tweet", _Inscription_GetTweet0_HTTP_Handler(srv))
+	r.GET("/api/follow_tweet", _Inscription_GetFollowTweet0_HTTP_Handler(srv))
+	r.GET("/api/tweet/{address}", _Inscription_GetTweetByAddress0_HTTP_Handler(srv))
+	r.GET("/api/follow", _Inscription_GetFollow0_HTTP_Handler(srv))
+	r.GET("/api/{trx_hash}", _Inscription_GetAnyByTrxHash0_HTTP_Handler(srv))
 }
 
-func _Inscription_CreateUser0_HTTP_Handler(srv InscriptionHTTPServer) func(ctx http.Context) error {
+func _Inscription_GetProfile0_HTTP_Handler(srv InscriptionHTTPServer) func(ctx http.Context) error {
 	return func(ctx http.Context) error {
-		var in CreateUserInfo
+		var in ByAddress
 		if err := ctx.BindQuery(&in); err != nil {
 			return err
 		}
-		http.SetOperation(ctx, OperationInscriptionCreateUser)
+		http.SetOperation(ctx, OperationInscriptionGetProfile)
 		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
-			return srv.CreateUser(ctx, req.(*CreateUserInfo))
+			return srv.GetProfile(ctx, req.(*ByAddress))
 		})
 		out, err := h(ctx, &in)
 		if err != nil {
 			return err
 		}
-		reply := out.(*UserInfoResponse)
+		reply := out.(*SwiftResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Inscription_GetGroup0_HTTP_Handler(srv InscriptionHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in ByAddress
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationInscriptionGetGroup)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetGroup(ctx, req.(*ByAddress))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*SwiftResponses)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Inscription_GetMessage0_HTTP_Handler(srv InscriptionHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetMessageReq
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationInscriptionGetMessage)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetMessage(ctx, req.(*GetMessageReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*SwiftResponses)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Inscription_GetGroupMessage0_HTTP_Handler(srv InscriptionHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetGroupMessageReq
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationInscriptionGetGroupMessage)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetGroupMessage(ctx, req.(*GetGroupMessageReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*SwiftResponses)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Inscription_GetTweet0_HTTP_Handler(srv InscriptionHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetTweetReq
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationInscriptionGetTweet)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetTweet(ctx, req.(*GetTweetReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*TweetResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Inscription_GetFollowTweet0_HTTP_Handler(srv InscriptionHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetTweetReq
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationInscriptionGetFollowTweet)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetFollowTweet(ctx, req.(*GetTweetReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*TweetResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Inscription_GetTweetByAddress0_HTTP_Handler(srv InscriptionHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetTweetReq
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationInscriptionGetTweetByAddress)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetTweetByAddress(ctx, req.(*GetTweetReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*TweetResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Inscription_GetFollow0_HTTP_Handler(srv InscriptionHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in ByAddress
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationInscriptionGetFollow)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetFollow(ctx, req.(*ByAddress))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*SwiftResponses)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Inscription_GetAnyByTrxHash0_HTTP_Handler(srv InscriptionHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetAnyByTrxHashReq
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationInscriptionGetAnyByTrxHash)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetAnyByTrxHash(ctx, req.(*GetAnyByTrxHashReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*SwiftResponse)
 		return ctx.Result(200, reply)
 	}
 }
 
 type InscriptionHTTPClient interface {
-	CreateUser(ctx context.Context, req *CreateUserInfo, opts ...http.CallOption) (rsp *UserInfoResponse, err error)
+	GetAnyByTrxHash(ctx context.Context, req *GetAnyByTrxHashReq, opts ...http.CallOption) (rsp *SwiftResponse, err error)
+	GetFollow(ctx context.Context, req *ByAddress, opts ...http.CallOption) (rsp *SwiftResponses, err error)
+	GetFollowTweet(ctx context.Context, req *GetTweetReq, opts ...http.CallOption) (rsp *TweetResponse, err error)
+	GetGroup(ctx context.Context, req *ByAddress, opts ...http.CallOption) (rsp *SwiftResponses, err error)
+	GetGroupMessage(ctx context.Context, req *GetGroupMessageReq, opts ...http.CallOption) (rsp *SwiftResponses, err error)
+	GetMessage(ctx context.Context, req *GetMessageReq, opts ...http.CallOption) (rsp *SwiftResponses, err error)
+	GetProfile(ctx context.Context, req *ByAddress, opts ...http.CallOption) (rsp *SwiftResponse, err error)
+	GetTweet(ctx context.Context, req *GetTweetReq, opts ...http.CallOption) (rsp *TweetResponse, err error)
+	GetTweetByAddress(ctx context.Context, req *GetTweetReq, opts ...http.CallOption) (rsp *TweetResponse, err error)
 }
 
 type InscriptionHTTPClientImpl struct {
@@ -61,11 +251,115 @@ func NewInscriptionHTTPClient(client *http.Client) InscriptionHTTPClient {
 	return &InscriptionHTTPClientImpl{client}
 }
 
-func (c *InscriptionHTTPClientImpl) CreateUser(ctx context.Context, in *CreateUserInfo, opts ...http.CallOption) (*UserInfoResponse, error) {
-	var out UserInfoResponse
-	pattern := "/api/collection/ranking"
+func (c *InscriptionHTTPClientImpl) GetAnyByTrxHash(ctx context.Context, in *GetAnyByTrxHashReq, opts ...http.CallOption) (*SwiftResponse, error) {
+	var out SwiftResponse
+	pattern := "/api/{trx_hash}"
 	path := binding.EncodeURL(pattern, in, true)
-	opts = append(opts, http.Operation(OperationInscriptionCreateUser))
+	opts = append(opts, http.Operation(OperationInscriptionGetAnyByTrxHash))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
+
+func (c *InscriptionHTTPClientImpl) GetFollow(ctx context.Context, in *ByAddress, opts ...http.CallOption) (*SwiftResponses, error) {
+	var out SwiftResponses
+	pattern := "/api/follow"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationInscriptionGetFollow))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
+
+func (c *InscriptionHTTPClientImpl) GetFollowTweet(ctx context.Context, in *GetTweetReq, opts ...http.CallOption) (*TweetResponse, error) {
+	var out TweetResponse
+	pattern := "/api/follow_tweet"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationInscriptionGetFollowTweet))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
+
+func (c *InscriptionHTTPClientImpl) GetGroup(ctx context.Context, in *ByAddress, opts ...http.CallOption) (*SwiftResponses, error) {
+	var out SwiftResponses
+	pattern := "/api/group"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationInscriptionGetGroup))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
+
+func (c *InscriptionHTTPClientImpl) GetGroupMessage(ctx context.Context, in *GetGroupMessageReq, opts ...http.CallOption) (*SwiftResponses, error) {
+	var out SwiftResponses
+	pattern := "/api/group_message"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationInscriptionGetGroupMessage))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
+
+func (c *InscriptionHTTPClientImpl) GetMessage(ctx context.Context, in *GetMessageReq, opts ...http.CallOption) (*SwiftResponses, error) {
+	var out SwiftResponses
+	pattern := "/api/message"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationInscriptionGetMessage))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
+
+func (c *InscriptionHTTPClientImpl) GetProfile(ctx context.Context, in *ByAddress, opts ...http.CallOption) (*SwiftResponse, error) {
+	var out SwiftResponse
+	pattern := "/api/profile"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationInscriptionGetProfile))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
+
+func (c *InscriptionHTTPClientImpl) GetTweet(ctx context.Context, in *GetTweetReq, opts ...http.CallOption) (*TweetResponse, error) {
+	var out TweetResponse
+	pattern := "/api/tweet"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationInscriptionGetTweet))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
+
+func (c *InscriptionHTTPClientImpl) GetTweetByAddress(ctx context.Context, in *GetTweetReq, opts ...http.CallOption) (*TweetResponse, error) {
+	var out TweetResponse
+	pattern := "/api/tweet/{address}"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationInscriptionGetTweetByAddress))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
 	if err != nil {
